tdf#91311 - handle toolbox tracking events post dispose safely.

Change-Id: I6284de937cd9daca45f37a780c75beb1585bb2a0